    these changes affect UTC offsets in pre-1970 time stamps only.
    Their old contents have been moved to the 'backzone' file.
    The affected zones are: Africa/Blantyre, Africa/Bujumbura,
    Africa/Gaborone, Africa/Harare, Africa/Kigali, Africa/Lubumbashi,
    Africa/Lusaka, Africa/Maseru, and Africa/Mbabane.

  Changes affecting code

    The tz library's localtime and mktime functions now set tzname to a value
    appropriate for the requested time stamp, and zdump now uses this
    on platforms not defining TM_ZONE, fixing a 2014g regression.
    (Thanks to Tim Parenti for reporting the problem.)

    The tz library no longer sets tzname if localtime or mktime fails.

    zdump -c no longer mishandles transitions near year boundaries.
    (Thanks to Tim Parenti for reporting the problem.)

    An access to uninitalized data has been fixed.
    (Thanks to Jörg Richter for reporting the problem.)

    When THREAD_SAFE is defined, the code ports to the C11 memory model.
    A memory leak has been fixed if ALL_STATE and THREAD_SAFE are defined
    and two threads race to initialize data used by gmtime-like functions.
    (Thanks to Andy Heninger for reporting the problems.)

  Changes affecting build procedure

    'make check' now checks better for properly-sorted data.

  Changes affecting documentation and commentary

    zdump -c's treatment of years is now documented to use the
    Gregorian calendar and Universal Time without leap seconds,
    and its behavior at cutoff boundaries is now documented better.
    (Thanks to Arthur David Olson and Tim Parenti for reporting the problems.)

    Programs are now documented to use the proleptic Gregorian calendar.
    (Thanks to Alan Barrett for the suggestion.)

    Fractional-second GMT offsets have been documented for civil time
    in 19th-century Chennai, Jakarta, and New York.


Release 2014g - 2014-08-28 12:31:23 -0700

  Changes affecting future time stamps
